--- a/CSS/fish.css
+++ b/CSS/fish.css
@@ -14,4 +14,8 @@ body{
     width: 800px;
     height: 500px;
     border:4px solid black;
+    background-image:url(../images/sea-sun.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
     }
